modified portfolio content

--- a/contact.html
+++ b/contact.html
@@ -4,39 +4,41 @@
 <head>
   <meta charset="utf-8" http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portfolio</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <title>Contact - Oluwafolajimi Bada</title>
+  <link href="style.css" rel="stylesheet" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
 </head>
 
 <body>
-  <main>
-    <header>
-      <nav class="navbar">
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About Me</a></li>
-          <li><a href="projects.html">Projects</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="contact.html">Contact Me</a></li>
-        </ul>
-      </nav>
-    </header>
+  <header>
+    <nav class="navbar">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About Me</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="contact.html" class="active">Contact Me</a></li>
+      </ul>
+    </nav>
+  </header>
 
+  <main>
     <section id="contact">
-      <h1 class="headings">CONTACT ME</h1>
-      <div class="contact-info">
-        <p><strong>Email:</strong> <a href="mailto:folabadaa@gmail.com">folabadaa@gmail.com</a></p>
-        <p><strong>WhatsApp:</strong> <a href="https://wa.me/2348093551920" target="_blank">+234 809 355 1920</a></p>
-        <p><strong>LinkedIn:</strong> 
-          <a href="https://www.linkedin.com/in/oluwafolajimi" target="_blank">Oluwafolajimi Bada</a>
+      <h1 class="headings">Get in Touch</h1>
+      <div class="contact-card">
+        <p><i class="fas fa-envelope"></i> Email: <a href="mailto:folabadaa@gmail.com">folabadaa@gmail.com</a></p>
+        <p><i class="fab fa-whatsapp"></i> WhatsApp: <a href="https://wa.me/2348093551920" target="_blank">+234 809 355 1920</a></p>
+        <p><i class="fab fa-linkedin"></i> LinkedIn: 
+          <a href="https://www.linkedin.com/in/oluwafolajimi" target="_blank">
+            Oluwafolajimi Bada
+          </a>
         </p>
       </div>
     </section>
   </main>
 
   <footer>
-    <p>Email: folabadaa@gmail.com</p>
-    <p>Whatsapp Number: 08093551920</p>
+    <p>&copy; 2025 Oluwafolajimi Bada. All rights reserved.</p>
   </footer>
 </body>
 
