--- a/services.html
+++ b/services.html
@@ -2,43 +2,104 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8" http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact - Oluwafolajimi Bada</title>
-  <link href="style.css" rel="stylesheet" />
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
+  <meta charset="utf-8" http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfolio - Services</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-  <header>
-    <nav class="navbar">
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Me</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="contact.html" class="active">Contact Me</a></li>
-      </ul>
-    </nav>
-  </header>
-
   <main>
-    <section id="contact">
-      <h1 class="headings">Get in Touch</h1>
-      <div class="contact-card">
-        <p><i class="fas fa-envelope"></i> Email: <a href="mailto:folabadaa@gmail.com">folabadaa@gmail.com</a></p>
-        <p><i class="fab fa-whatsapp"></i> WhatsApp: <a href="https://wa.me/2348093551920" target="_blank">+234 809 355 1920</a></p>
-        <p><i class="fab fa-linkedin"></i> LinkedIn: 
-          <a href="https://www.linkedin.com/in/oluwafolajimi" target="_blank">
-            Oluwafolajimi Bada
-          </a>
-        </p>
+    <header>
+      <nav class="navbar">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About Me</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="contact.html">Contact Me</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <section id="services">
+      <h1 class="headings">SERVICES</h1>
+      <div class="row">
+
+        <div class="box">
+          <h1 class="headings">Full-Stack Web Development</h1>
+          <p>
+            I specialize in building scalable full-stack applications using:
+          </p>
+          <ul>
+            <li><strong>Frontend:</strong> Angular, React, HTML5, CSS3, JavaScript, Bootstrap</li>
+            <li><strong>Backend:</strong> ASP.NET Core, .NET 7+, Entity Framework Core</li>
+            <li><strong>APIs:</strong> RESTful Services, Authentication (JWT), Middleware</li>
+            <li><strong>Databases:</strong> SQL Server, PostgreSQL, MongoDB</li>
+          </ul>
+        </div>
+
+        <div class="box">
+          <h1 class="headings">Frontend Engineering</h1>
+          <p>
+            I build responsive, high-performance user interfaces using:
+          </p>
+          <ul>
+            <li>Angular (15+)</li>
+            <li>React.js</li>
+            <li>RxJS, Observables</li>
+            <li>State Management (NgRx, React Context)</li>
+            <li>Component-based architecture</li>
+          </ul>
+        </div>
+
+        <div class="box">
+          <h1 class="headings">Backend Engineering (.NET)</h1>
+          <p>
+            I design robust backend systems with a focus on clean architecture and domain-driven design:
+          </p>
+          <ul>
+            <li>ASP.NET Core Web API</li>
+            <li>Entity Framework Core with Fluent API</li>
+            <li>Clean Architecture & DDD principles</li>
+            <li>Authentication/Authorization (JWT, Identity)</li>
+            <li>Dependency Injection, Repository Pattern</li>
+          </ul>
+        </div>
+
+        <div class="box">
+          <h1 class="headings">API Integration & Microservices</h1>
+          <p>
+            I develop and integrate APIs for modular, scalable systems:
+          </p>
+          <ul>
+            <li>REST API Design & Documentation</li>
+            <li>Microservice Architecture (with .NET)</li>
+            <li>Third-party integrations (e.g., payment, logistics, notifications)</li>
+            <li>Swagger / OpenAPI documentation</li>
+          </ul>
+        </div>
+
+        <div class="box">
+          <h1 class="headings">DevOps & Project Delivery</h1>
+          <p>
+            I ensure quality delivery through modern deployment and collaboration tools:
+          </p>
+          <ul>
+            <li>Version Control: Git, GitHub</li>
+            <li>CI/CD: GitHub Actions, Azure DevOps</li>
+            <li>Containerization: Docker (basic)</li>
+            <li>Agile Workflow: Scrum, Jira</li>
+          </ul>
+        </div>
+
       </div>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 Oluwafolajimi Bada. All rights reserved.</p>
+    <p>Email: folabadaa@gmail.com</p>
+    <p>WhatsApp Number: 08093551920</p>
   </footer>
 </body>
 
