--- a/contact.html
+++ b/contact.html
@@ -10,17 +10,20 @@
 </head>
 
 <body>
-  <header>
-    <nav class="navbar">
-      <ul>
+ <header>
+  <nav class="navbar">
+    <div class="nav-container">
+      <div id="menu-icon">&#9776;</div> <!-- hamburger -->
+      <ul id="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About Me</a></li>
         <li><a href="projects.html">Projects</a></li>
         <li><a href="services.html">Services</a></li>
-        <li><a href="contact.html" class="active">Contact Me</a></li>
+        <li><a href="contact.html">Contact Me</a></li>
       </ul>
-    </nav>
-  </header>
+    </div>
+  </nav>
+</header>
 
   <main>
     <section id="contact">
@@ -41,5 +44,5 @@
     <p>&copy; 2025 Oluwafolajimi Bada. All rights reserved.</p>
   </footer>
 </body>
-
+<script src="header.js"></script>
 </html>
