--- a/index.html
+++ b/index.html
@@ -10,16 +10,21 @@
 <body>
     <main>
 <header>
-<nav class="navbar">
-    <ul>
-       <li><a href="index.html" >Home</a></li>
-       <li><a href="about.html" >About Me</a></li>
-       <li><a href="projects.html" >Projects</a></li>
-       <li><a href="services.html" >Services</a></li>
-       <li><a href="contact.html" >Contact Me</a></li>
-    </ul>
-</nav>
+  <nav class="navbar">
+    <div class="nav-container">
+      <div id="menu-icon">&#9776;</div> <!-- hamburger -->
+      <ul id="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About Me</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="contact.html">Contact Me</a></li>
+      </ul>
+    </div>
+  </nav>
 </header>
+
+
 
 <section id="home">
     <div class="main">
@@ -33,4 +38,5 @@
     <p>Email: folabadaa@gmail.com</p>
     <p>Whatsapp Number: 08093551920</p>
 </footer>
+<script src="header.js"></script>
 </html>
