--- a/projects.html
+++ b/projects.html
@@ -10,17 +10,20 @@
 
 <body>
     <main>
-        <header>
-            <nav class="navbar">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About Me</a></li>
-                    <li><a href="projects.html">Projects</a></li>
-                    <li><a href="services.html">Services</a></li>
-                    <li><a href="contact.html">Contact Me</a></li>
-                </ul>
-            </nav>
-        </header>
+     <header>
+  <nav class="navbar">
+    <div class="nav-container">
+      <div id="menu-icon">&#9776;</div> <!-- hamburger -->
+      <ul id="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About Me</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="contact.html">Contact Me</a></li>
+      </ul>
+    </div>
+  </nav>
+</header>
         <section id="portfolio">
             <h1 class="headings">PROJECTS</h1>
             <div class="row">
@@ -111,5 +114,5 @@
     <p>Email: folabadaa@gmail.com</p>
     <p>Whatsapp Number: 08093551920</p>
 </footer>
-
+<script src="header.js"></script>
 </html>
