add counter script to all HTML files for enhanced tracking

--- a/about.html
+++ b/about.html
@@ -64,5 +64,8 @@
     <p>WhatsApp: 08093551920</p>
   </footer>
 </body>
+<script defer src="https://cdn.counter.dev/script.js"
+        data-id="https://folabada.github.io/portfolio/"
+        data-utcoffset="+1"></script>
 <script src="header.js"></script>
 </html>
