--- a/projects.html
+++ b/projects.html
@@ -114,5 +114,8 @@
     <p>Email: folabadaa@gmail.com</p>
     <p>Whatsapp Number: 08093551920</p>
 </footer>
+<script defer src="https://cdn.counter.dev/script.js"
+        data-id="https://folabada.github.io/portfolio/"
+        data-utcoffset="+1"></script>
 <script src="header.js"></script>
 </html>
