--- a/contact.html
+++ b/contact.html
@@ -44,5 +44,8 @@
     <p>&copy; 2025 Oluwafolajimi Bada. All rights reserved.</p>
   </footer>
 </body>
+<script defer src="https://cdn.counter.dev/script.js"
+        data-id="https://folabada.github.io/portfolio/"
+        data-utcoffset="+1"></script>
 <script src="header.js"></script>
 </html>
