--- a/services.html
+++ b/services.html
@@ -105,5 +105,8 @@
     <p>WhatsApp Number: 08093551920</p>
   </footer>
 </body>
+<script defer src="https://cdn.counter.dev/script.js"
+        data-id="https://folabada.github.io/portfolio/"
+        data-utcoffset="+1"></script>
 <script src="header.js"></script>
 </html>
