--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About Me | Portfolio</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
+  <script src="https://cdn.counter.dev/script.js" data-id="bbe6e282-6a04-4bf3-b9a5-6112a00a3c9b" data-utcoffset="1"></script>
 </head>
 
 <body>
@@ -64,8 +65,5 @@
     <p>WhatsApp: 08093551920</p>
   </footer>
 </body>
-<script defer src="https://cdn.counter.dev/script.js"
-        data-id="https://folabada.github.io/portfolio/"
-        data-utcoffset="+1"></script>
 <script src="header.js"></script>
 </html>
