--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,8 @@
   <title>Contact - Oluwafolajimi Bada</title>
   <link href="style.css" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
+
+  <script src="https://cdn.counter.dev/script.js" data-id="bbe6e282-6a04-4bf3-b9a5-6112a00a3c9b" data-utcoffset="1"></script>
 </head>
 
 <body>
@@ -44,8 +46,5 @@
     <p>&copy; 2025 Oluwafolajimi Bada. All rights reserved.</p>
   </footer>
 </body>
-<script defer src="https://cdn.counter.dev/script.js"
-        data-id="https://folabada.github.io/portfolio/"
-        data-utcoffset="+1"></script>
 <script src="header.js"></script>
 </html>
